--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -39,7 +39,7 @@
         "\n",
         "#clear_output()\n",
         "#print('[1;32mModel Save ✓')\n",
-        "     "
+        ""
       ]
     },
     {
@@ -69,7 +69,7 @@
         "print(\"\u001b[1;90m\") #Cyan text\n",
         "\n",
         "try:\n",
-        "  output \n",
+        "  output\n",
         "except:\n",
         "  print('Checking GPU...', end='')\n",
         "  output = getoutput('nvidia-smi --query-gpu=gpu_name --format=csv')\n",
@@ -84,7 +84,7 @@
         "    runtime.unassign()\n",
         "\n",
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
-        "SDZ_install = \"/content\" \n",
+        "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
         "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.inpaint\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.Reliberate_inp_1\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision2\",  \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
         "SDZ = \"SDZ\"\n",
@@ -107,7 +107,7 @@
         "stable_build = False\n",
         "\n",
         "# SDZ_RunSDZ\n",
-        "if not SDZ_Continue: \n",
+        "if not SDZ_Continue:\n",
         "  with capture.capture_output() as cap:\n",
         "    if os.path.exists(SDZ):\n",
         "      shutil.rmtree(SDZ)\n",
@@ -118,7 +118,7 @@
         "\n",
         "    %cd SDZ\n",
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
-        "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')]; \n",
+        "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')];\n",
         "\n",
         "    clear_output()\n",
         "  print('\u001b[1;96mInstalling SDZ ✓')\n",
@@ -139,19 +139,19 @@
         "    # !apt install liblz4-tool aria2\n",
         "    # !pip uninstall -q -y huggingface_hub\n",
         "    # !{'curl -LO https://github.com/BurntSushi/ripgrep/releases/download/13.0.0/ripgrep_13.0.0_amd64.deb && dpkg -i ripgrep_13.0.0_amd64.deb && rm -rf ripgrep_13.0.0_amd64.deb'}\n",
-        "    \n",
+        "\n",
         "    # !aria2c --summary-interval=10 -c -x 16 -k 1M -s 16 -d /content -Z \\\n",
         "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4 \\\n",
         "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4 \\\n",
         "    #   https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
-        "    \n",
+        "\n",
         "    # !aria2c -d /content -o dep.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\n",
         "    # !aria2c -d /content -o repo.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\n",
         "    # !aria2c -d /content -o cache.tar.lz4 --summary-interval=10 -c -x 16 -k 1M -s 16 https://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\n",
         "\n",
         "    !echo -e \"https://huggingface.co/NoCrypt/fast-repo/resolve/main/dep.tar.lz4\\n\\tout=dep.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/repo.tar.lz4\\n\\tout=repo.tar.lz4\\nhttps://huggingface.co/NoCrypt/fast-repo/resolve/main/cache.tar.lz4\\n\\tout=cache.tar.lz4\\n\" \\\n",
-        "      | aria2c -i- -j5 -x16 -s16 -k1M -c \n",
-        "    \n",
+        "      | aria2c -i- -j5 -x16 -s16 -k1M -c\n",
+        "\n",
         "    !tar -xI lz4 -f dep.tar.lz4 --overwrite-dir --directory=/usr/local/lib/python3.10/dist-packages/ #(manual dir)\n",
         "    !tar -xI lz4 -f repo.tar.lz4 --directory=/ #/content/SDZ/ (auto dir)\n",
         "    !tar -xI lz4 -f cache.tar.lz4 --directory=/ #/root/.cache/huggingface (auto dir)\n",
@@ -163,7 +163,7 @@
         "    os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
         "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
         "    # !apt -y update -qq\n",
-        "    \n",
+        "\n",
         "    %env LD_PRELOAD=libtcmalloc.so\n",
         "    del cap\n",
         "  if not os.path.exists(hypernetworks_dir):\n",
@@ -195,7 +195,7 @@
         "  %cd models/Stable-diffusion\n",
         "  if SDZ_Download_Model == \"V1.5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
-        "    \n",
+        "\n",
         "  elif SDZ_Download_Model == \"V1.5.inpaint\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/v1-5-inpaint-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15inp.ckpt $url)\n",
         "\n",
@@ -252,6 +252,7 @@
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/62833\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
@@ -317,7 +318,7 @@
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
         "    #!git clone https://github.com/AbdullahAlfaraj/sd-webui-controlnet.git\n",
         "    #!git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
-        "    \n",
+        "\n",
         "    %cd sd-webui-controlnet/models\n",
         "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_ControlNet.txt') if not os.path.exists('t2iadapter_color-fp16.safetensors') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_ControlNet.txt').readlines()))]];\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
@@ -356,7 +357,7 @@
         "      !pip install open-clip-torch\n",
         "      !pip install triton\n",
         "      !sed -i 's@def load_state_dict(checkpoint_path: str, map_location.*@def load_state_dict(checkpoint_path: str, map_location=\"cuda\"):@' /usr/local/lib/python3.10/site-packages/open_clip/factory.py\n",
-        "    \n",
+        "\n",
         "    os.chdir(SDZ_install)\n",
         "    %cd stable-diffusion-webui\n",
         "    !git checkout 1130d5df669911a5c67696be90bccca3ecf5f487\n",
@@ -385,7 +386,7 @@
         "    clear_output()\n",
         "print('\u001b[1;90mPreparing SDZ System ✓')\n",
         "if SDZ_Version == \"V1.5\":\n",
-        "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" REQS_FILE=\"requirements_versions.txt\" python launch.py \n",
+        "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" REQS_FILE=\"requirements_versions.txt\" python launch.py\n",
         "\n",
         "elif SDZ_Version == \"V2.1\":\n",
         "    !COMMANDLINE_ARGS=\"{SDZ_Args}\" REQS_FILE=\"requirements_versions.txt\" python launch.py SDZconfigV2\n",
