--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -38,14 +38,13 @@
         "#!wget --no-check-certificate $url\n",
         "\n",
         "#clear_output()\n",
-        "#print('[1;32mModel Save ✓')\n",
-        ""
+        "#print('[1;32mModel Save ✓')\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
+        "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/SDZanim2.gif?raw=true' height=\"50\" alt=\"netdata\"/></center> <a href=\"https://wilzamguerrero.ml/3c030fffd57c4e3bb4dd62e3971cb6a9\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/how_to_use5.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://zero01101.github.io/openOutpaint/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/open_out_paint.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> <a href=\"https://www.painthua.com/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/paint_hua.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/ddPn08/kohya-sd-scripts-webui\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://github.com/Linaqruf/kohya-trainer\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/kohya2.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </a> <a href=\"https://zhuyu1997.github.io/open-pose-editor/\"><font face='Verdana Regular' color='#80ff3' size='4'><left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/save.png?raw=true' height=\"42\" alt=\"netdata\"/></center></font></a> </center></font></a>\n",
         "##@markdown <left><font face='Squired Regular' color='#00f3f3' size='4'>Stable Diffusion Z</font>\n",
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>SDZboton</font> <a href=\"https://pbs.twimg.com/profile_images/1022127431447195649/ASyO_yY3_400x400.jpg\"><font face='Verdana Regular' color='#80ff3' size='4'>SDZboton</font></a>\n",
         "import os\n",
@@ -268,6 +267,9 @@
         "    !git clone https://github.com/etherealxx/batchlinks-webui.git\n",
         "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
         "    !git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git\n",
+        "    #!git clone https://github.com/jtydhr88/sd-canvas-editor.git\n",
+        "    #!git clone https://github.com/thygate/stable-diffusion-webui-depthmap-script.git\n",
+        "    #!git clone https://github.com/graemeniedermayer/stable-diffusion-webui-normalmap-script.git\n",
         "    #!git clone https://github.com/dustysys/ddetailer.git\n",
         "    #!git clone https://github.com/Bing-su/adetailer.git\n",
         "    #!git clone https://github.com/volotat/SD-CN-Animation.git\n",
