--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -320,6 +320,11 @@
         "    !git clone https://github.com/Mikubill/sd-webui-controlnet.git\n",
         "    #!git clone https://github.com/AbdullahAlfaraj/sd-webui-controlnet.git\n",
         "    #!git clone https://github.com/crucible-ai/sd-webui-controlnet.git\n",
+        "    %cd sd-webui-controlnet\n",
+        "    !wget https://huggingface.co/uwg/modelz_base/resolve/main/Extras/scripts2.zip\n",
+        "    !unzip scripts2.zip -d scripts2\n",
+        "    !rm scripts2.zip\n",
+        "    %cd ..\n",
         "\n",
         "    %cd sd-webui-controlnet/models\n",
         "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_ControlNet.txt') if not os.path.exists('t2iadapter_color-fp16.safetensors') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_ControlNet.txt').readlines()))]];\n",
