--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -268,6 +268,7 @@
         "    !git clone https://github.com/camenduru/sd-webui-tunnels\n",
         "    !git clone https://github.com/yankooliveira/sd-webui-photopea-embed.git\n",
         "    #!git clone https://github.com/s0md3v/sd-webui-roop.git\n",
+        "    #!git clone https://github.com/ArtVentureX/sd-webui-agent-scheduler.git\n",
         "    #!git clone https://github.com/jtydhr88/sd-canvas-editor.git\n",
         "    #!git clone https://github.com/thygate/stable-diffusion-webui-depthmap-script.git\n",
         "    #!git clone https://github.com/graemeniedermayer/stable-diffusion-webui-normalmap-script.git\n",
