--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -252,6 +252,8 @@
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
         "    !wget --timestamping https://civitai.com/api/download/models/62833\n",
+        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/add_detail.safetensors\n",
+        "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
