fix link Extensions

--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -86,7 +86,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision2\",  \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
+        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision3\",  \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -179,8 +179,8 @@
         "  elif SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/darkstorm2150/Protogen_x5.8_Official_Release/resolve/main/ProtoGen_X5.8-pruned-fp16.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Protogenx58.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.RealisticVision2\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/29460\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15RealisticVision2.safetensors $url)\n",
+        "  elif SDZ_Download_Model == \"V1.5.RealisticVision3\":\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/SG161222/Realistic_Vision_V3.0_VAE/resolve/main/Realistic_Vision_V3.0_fp16-no-ema.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15RealisticVision3.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"V2.1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv2-1_768-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v21.ckpt $url)\n",
@@ -224,9 +224,49 @@
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
+        "        !gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
+        "        #!gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
+        "        #!gdown https://acortar.link/glUPMq -O canvas-editor.zip && unzip -n canvas-editor.zip && rm canvas-editor.zip\n",
+        "        #!gdown https://acortar.link/r5yoeb -O depthmap-script.zip && unzip -n depthmap-script.zip && rm depthmap-script.zip\n",
+        "        #!gdown https://acortar.link/ESjkXf -O depthmap2mask.zip && unzip -n depthmap2mask.zip && rm depthmap2mask.zip\n",
+        "        #!gdown https://acortar.link/FsLVUb -O normalmap-script.zip && unzip -n normalmap-script.zip && rm normalmap-script.zip\n",
+        "        #!gdown https://acortar.link/cGYWlc -O adetailer.zip && unzip -n adetailer.zip && rm adetailer.zip\n",
+        "        #!gdown https://acortar.link/gqzWbD -O SD-CN-Animation.zip && unzip -n SD-CN-Animation.zip && rm SD-CN-Animation.zip\n",
+        "        #!gdown https://acortar.link/p8qOph -O mov2mov.zip && unzip -n mov2mov.zip && rm mov2mov.zip\n",
+        "        #!gdown https://acortar.link/hwoL5v -O promptgen.zip && unzip -n promptgen.zip && rm promptgen.zip\n",
+        "        #!gdown https://acortar.link/LO4i8S -O Prompt_Generator.zip && unzip -n Prompt_Generator.zip && rm Prompt_Generator.zip\n",
+        "        #!gdown https://acortar.link/HuYSFU -O lobe-theme.zip && unzip -n lobe-theme.zip && rm lobe-theme.zip\n",
+        "        #!gdown https://acortar.link/O2w0yW -O infinite-zoom.zip && unzip -n infinite-zoom.zip && rm infinite-zoom.zip\n",
+        "        #!gdown https://acortar.link/eaojeA -O two-shot.zip && unzip -n two-shot.zip && rm two-shot.zip\n",
+        "        #!gdown https://acortar.link/eZFyiN -O regional-prompter.zip && unzip -n regional-prompter.zip && rm regional-prompter.zip\n",
+        "        #!gdown https://acortar.link/QjABYa -O composable-lora.zip && unzip -n composable-lora.zip && rm composable-lora.zip\n",
+        "        #!gdown https://acortar.link/dpbdks -O depth-hands.zip && unzip -n depth-hands.zip && rm depth-hands.zip\n",
+        "        #!gdown https://acortar.link/01sbGg -O pose-editor-3d.zip && unzip -n pose-editor-3d.zip && rm pose-editor-3d.zip\n",
+        "        #!gdown https://acortar.link/aNjD4Q -O pose-editor3d.zip && unzip -n pose-editor3d.zip && rm pose-editor3d.zip\n",
+        "        #!gdown https://acortar.link/9FJQtn -O posex.zip && unzip -n posex.zip && rm posex.zip\n",
+        "        #!gdown https://acortar.link/o2lUBc -O openpose-editor.zip && unzip -n openpose-editor.zip && rm openpose-editor.zip\n",
+        "        #!gdown https://acortar.link/i5gthO -O Civitai-Helper.zip && unzip -n Civitai-Helper.zip && rm Civitai-Helper.zip\n",
+        "        #!gdown https://acortar.link/FItcni -O pixelization.zip && unzip -n pixelization.zip && rm pixelization.zip\n",
+        "        #!gdown https://acortar.link/4HFBBC -O ebsynth-utility.zip && unzip -n ebsynth-utility.zip && rm ebsynth-utility.zip\n",
+        "        #!gdown https://acortar.link/HOw9Dh -O bilingual-localization.zip && unzip -n bilingual-localization.zip && rm bilingual-localization.zip\n",
+        "        #!gdown https://acortar.link/l8aaJO -O supermerger.zip && unzip -n supermerger.zip && rm supermerger.zip\n",
+        "        #!gdown https://acortar.link/D8Rn6L -O merge-block-weighted.zip && unzip -n merge-block-weighted.zip && rm merge-block-weighted.zip\n",
+        "        #!gdown https://acortar.link/Y6JKa9 -O model-toolkit.zip && unzip -n model-toolkit.zip && rm model-toolkit.zip\n",
+        "        #!gdown https://acortar.link/9OfKVt -O video_loopback.zip && unzip -n video_loopback.zip && rm video_loopback.zip\n",
+        "        #!gdown https://acortar.link/JHmMzr -O dynamic-thresholding.zip && unzip -n dynamic-thresholding.zip && rm dynamic-thresholding.zip\n",
+        "        #!gdown https://acortar.link/SClVrc -O additional-networks.zip && unzip -n additional-networks.zip && rm additional-networks.zip\n",
+        "        #!gdown https://acortar.link/dNQEnV -O llul.zip && unzip -n llul.zip && rm llul.zip\n",
+        "        #!gdown https://acortar.link/fQlWfu -O cutoff.zip && unzip -n cutoff.zip && rm cutoff.zip\n",
+        "        #!gdown https://acortar.link/GVpO61 -O rembg.zip && unzip -n rembg.zip && rm rembg.zip\n",
+        "        #!gdown https://acortar.link/7tZxUG -O huggingface-up.zip && unzip -n huggingface-up.zip && rm huggingface-up.zip\n",
+        "        #!gdown https://acortar.link/48NKwo -O OneButtonPrompt.zip && unzip -n OneButtonPrompt.zip && rm OneButtonPrompt.zip\n",
+        "        #!gdown https://acortar.link/om98qv -O infinite-image-browsing.zip && unzip -n infinite-image-browsing.zip && rm infinite-image-browsing.zip\n",
+        "        #!gdown https://acortar.link/bB4OkD -O inpaint-anything.zip && unzip -n inpaint-anything.zip && rm inpaint-anything.zip\n",
+        "        #!gdown https://acortar.link/gNnek7 -O TemporalKit.zip && unzip -n TemporalKit.zip && rm TemporalKit.zip\n",
+        "\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
