--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -225,6 +225,7 @@
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
         "        !gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
+        "        !gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
@@ -275,11 +276,15 @@
         "    %cd extensions\n",
         "    if not os.path.exists('controlnet'):\n",
         "        !gdown https://acortar.link/XZ3XnA -O controlnet_Mikubill.zip && (mkdir -p controlnet; unzip -n controlnet_Mikubill.zip -d controlnet && mv controlnet/*/* controlnet/ && rm controlnet_Mikubill.zip)\n",
+        "        #!gdown https://acortar.link/8EU5Ne -O controlnet_AbdullahAlfaraj.zip && (mkdir -p controlnet2; unzip -n controlnet_AbdullahAlfaraj.zip -d controlnet2 && mv controlnet2/*/* controlnet2/ && rm controlnet_AbdullahAlfaraj.zip)\n",
         "\n",
-        "    %cd controlnet/models\n",
+        "    os.chdir(SDZ_webui_path+'/'+'models')\n",
+        "    if not os.path.exists('ControlNet'):\n",
+        "        os.makedirs('ControlNet')\n",
+        "    %cd ControlNet\n",
         "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_ControlNet.txt') if not os.path.exists('t2iadapter_color-fp16.safetensors') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_ControlNet.txt').readlines()))]];\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
-        "    %cd ../../..\n",
+        "    %cd ../..\n",
         "\n",
         "# SDZ_Upscalers\n",
         "  if SDZ_Upscalers:\n",
