--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -215,17 +215,17 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "    if not os.path.exists('controlnet'):\n",
+        "    if not os.path.exists('batchlinks-webui-main'):\n",
+        "        !gdown https://acortar.link/5GXaEX -O batchlinks.zip && unzip -n batchlinks.zip && rm batchlinks.zip\n",
         "        !gdown https://acortar.link/6QJzqw -O ultimate_upscale.zip && unzip -n ultimate_upscale.zip && rm ultimate_upscale.zip\n",
         "        !gdown https://acortar.link/Y9tabV -O civitai-browser.zip && unzip -n civitai-browser.zip && rm civitai-browser.zip\n",
         "        !gdown https://acortar.link/rPmvQq -O tagcomplete.zip && unzip -n tagcomplete.zip && rm tagcomplete.zip\n",
         "        !gdown https://acortar.link/OokkEf -O images-browser.zip && unzip -n images-browser.zip && rm images-browser.zip\n",
-        "        !gdown https://acortar.link/5GXaEX -O batchlinks.zip && unzip -n batchlinks.zip && rm batchlinks.zip\n",
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
         "        !gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
-        "        !gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
+        "        #!gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
@@ -282,7 +282,7 @@
         "    if not os.path.exists('ControlNet'):\n",
         "        os.makedirs('ControlNet')\n",
         "    %cd ControlNet\n",
-        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_ControlNet.txt') if not os.path.exists('t2iadapter_color-fp16.safetensors') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_ControlNet.txt').readlines()))]];\n",
+        "    import os; from concurrent.futures import ThreadPoolExecutor; [executor.submit(os.system, line.strip()) for line in open(SDZ_webui_path+'/SDZ_ControlNet.txt') if not os.path.exists('control_v11f1p_sd15_depth.pth') for executor in [ThreadPoolExecutor(max_workers=len(open(SDZ_webui_path+'/SDZ_ControlNet.txt').readlines()))]];\n",
         "    !cp cldm_v15.yaml cldm_v21.yaml {os.path.join(SDZ_webui_path, 'models')}\n",
         "    %cd ../..\n",
         "\n",
