--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -136,10 +136,10 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  import os\n",
         "  os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
-        "  os.environ[\"SAFETENSORS_FAST_GPU\"]='1'\n",
-        "  os.environ[\"colab_url\"] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
-        "  os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
-        "  os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
+        "  #os.environ[\"SAFETENSORS_FAST_GPU\"]='1'\n",
+        "  #os.environ[\"colab_url\"] = eval_js(\"google.colab.kernel.proxyPort(7860, {'cache': false})\")\n",
+        "  #os.environ[\"PYTHONWARNINGS\"] = \"ignore\"\n",
+        "  #os.environ['PYTORCH_CUDA_ALLOC_CONF'] = \"garbage_collection_threshold:0.9,max_split_size_mb:512\"\n",
         "\n",
         "  #!pip install svglib\n",
         "  #!sudo apt-get install libcairo2-dev\n",
