--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -174,7 +174,8 @@
         "  #   !pip uninstall -y xformers\n",
         "  install_time = timedelta(seconds=time.time()-start_install)\n",
         "  time_since_start = timedelta(seconds=time.time()-start_colab)\n",
-        "  print(\"⌚ You've been running this colab for\",\"%02d:%02d:%02d\" % (time_since_start.seconds / 3600, (time_since_start.seconds / 60) % 60, time_since_start.seconds % 60))\n",
+        "  clear_output()\n",
+        "print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
         "# Colab patches for quality of life improvements\n",
         "with capture.capture_output() as cap:\n",
@@ -224,8 +225,8 @@
         "    !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
         "    import os; [os.system(line.strip()) for line in open(SDZ_webui_path+'/''SDZ_Files.txt')];\n",
         "\n",
-        "    clear_output()\n",
-        "  print('\u001b[1;96mInstalling SDZ ✓')\n",
+        "    #clear_output()\n",
+        "  #print('\u001b[1;96mInstalling SDZ ✓')\n",
         "\n",
         "if SDZ_Continue:\n",
         "  with capture.capture_output() as cap:\n",
@@ -363,6 +364,7 @@
         "        #!gdown https://acortar.link/om98qv -O infinite-image-browsing.zip && unzip -n infinite-image-browsing.zip && rm infinite-image-browsing.zip\n",
         "        #!gdown https://acortar.link/bB4OkD -O inpaint-anything.zip && unzip -n inpaint-anything.zip && rm inpaint-anything.zip\n",
         "        #!gdown https://acortar.link/gNnek7 -O TemporalKit.zip && unzip -n TemporalKit.zip && rm TemporalKit.zip\n",
+        "        #!git clone https://github.com/sunnyark/civitai-shortcut\n",
         "\n",
         "    %cd ..\n",
         "\n",
