--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -371,7 +371,9 @@
         "        #!git clone https://github.com/sunnyark/civitai-shortcut\n",
         "        #!gdown https://acortar.link/52XJvM -O dragGAN.zip && unzip -n dragGAN.zip && rm dragGAN.zip\n",
         "        #!gdown https://acortar.link/TQvkPk -O loopback_scaler.zip && unzip -n loopback_scaler.zip && rm loopback_scaler.zip\n",
-        "\n",
+        "        #!gdown https://acortar.link/c7W5YY -O 3D_editor.zip && unzip -n 3D_editor.zip && rm 3D_editor.zip\n",
+        "        #!gdown https://acortar.link/KayyQV -O 3D_loader.zip && unzip -n 3D_loader.zip && rm 3D_loader.zip\n",
+        "        #!gdown https://acortar.link/e5cxQ0 -O txt_img_3d.zip && unzip -n txt_img_3d.zip && rm txt_img_3d.zip\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
