--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -87,7 +87,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision3\", \"V1.5.RealisticVision4\", \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
+        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -276,9 +276,6 @@
         "  elif SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/darkstorm2150/Protogen_x5.8_Official_Release/resolve/main/ProtoGen_X5.8-pruned-fp16.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Protogenx58.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.RealisticVision3\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/SG161222/Realistic_Vision_V3.0_VAE/resolve/main/Realistic_Vision_V3.0_fp16-no-ema.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15RealisticVision3.safetensors $url)\n",
-        "\n",
         "  elif SDZ_Download_Model == \"V1.5.RealisticVision4\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=pruned&fp=fp16\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o realisticVisionv40VAE.safetensors $url)\n",
         "\n",
@@ -374,6 +371,9 @@
         "        #!gdown https://acortar.link/c7W5YY -O 3D_editor.zip && unzip -n 3D_editor.zip && rm 3D_editor.zip\n",
         "        #!gdown https://acortar.link/KayyQV -O 3D_loader.zip && unzip -n 3D_loader.zip && rm 3D_loader.zip\n",
         "        #!gdown https://acortar.link/e5cxQ0 -O txt_img_3d.zip && unzip -n txt_img_3d.zip && rm txt_img_3d.zip\n",
+        "        #!gdown https://acortar.link/US0GK0 -O qrcode_gen.zip && unzip -n qrcode_gen.zip && rm qrcode_gen.zip\n",
+        "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
+        "\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
