--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -306,12 +306,11 @@
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/epiNoiseoffset_v2.safetensors\n",
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/theovercomer8sContrastFix_sd15.safetensors\n",
         "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/to8sHighKeyLORASD15SD2_sd15.safetensors\n",
-        "    !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/add_detail.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/63006\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/117467\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/63006 -O LowRA.safetensors\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/117467 -O polyhedron_skinny_all.pt\n",
         "    !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
         "    #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
-        "    !wget --timestamping https://civitai.com/api/download/models/62833\n",
+        "    !wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
         "    %cd ../..\n",
         "\n",
         "    %cd embeddings\n",
