--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -87,7 +87,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\" #@param [\"V1.5\", \"V2.1\"]\n",
-        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
+        "SDZ_Download_Model = \"V1.5.SPYBG_ToolKit5\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.DreamShaper\", \"V1.5.Photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"V2.1\", \"V2.1.Perfect_World_3\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -95,7 +95,7 @@
         "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
         "SDZ_Training = \"\" #@param [\"\", \"New_Dreambooth - Kohya\", \"Old_Dreambooth\"]\n",
-        "SDZ_Args = \"--share --api --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
+        "SDZ_Args = \"--share --api --xformers --no-hashing --theme=dark --cloudflared --no-half --disable-nan-check --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = True\n",
         "SDZ_Big_Models = True\n",
@@ -267,8 +267,8 @@
         "  elif SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/XpucT/Reliberate/resolve/main/Reliberate.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Reliberate_1.safetensors $url)\n",
         "\n",
-        "  elif SDZ_Download_Model == \"V1.5.photon_1\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/90072\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15photon_1.safetensors $url)\n",
+        "  elif SDZ_Download_Model == \"V1.5.Photon_1\":\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/90072\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Photon_1.safetensors $url)\n",
         "\n",
         "\n",
         "  elif SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
