--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -379,6 +379,7 @@
         "        #!gdown https://acortar.link/e5cxQ0 -O txt_img_3d.zip && unzip -n txt_img_3d.zip && rm txt_img_3d.zip\n",
         "        #!gdown https://acortar.link/US0GK0 -O qrcode_gen.zip && unzip -n qrcode_gen.zip && rm qrcode_gen.zip\n",
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
+        "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
